# PyOrcid

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  example.ipynb  md_generator_example.md  pyproject.toml  requirements.txt
.github/workflows/: greetings.yml  tests.yml
pyorcid/: orcid.py
src/pyorcid/: __init__.py  orcid.py  orcid_authentication.py  orcid_scrapper.py  orcid_search.py
tests/: test_orcid.py
